@@ -1,89 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2021/12/24 13:30:15 wiz Exp $
-bin/davserver
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/pywebdav/__init__.py
-${PYSITELIB}/pywebdav/__init__.pyc
-${PYSITELIB}/pywebdav/__init__.pyo
-${PYSITELIB}/pywebdav/lib/AuthServer.py
-${PYSITELIB}/pywebdav/lib/AuthServer.pyc
-${PYSITELIB}/pywebdav/lib/AuthServer.pyo
-${PYSITELIB}/pywebdav/lib/INI_Parse.py
-${PYSITELIB}/pywebdav/lib/INI_Parse.pyc
-${PYSITELIB}/pywebdav/lib/INI_Parse.pyo
-${PYSITELIB}/pywebdav/lib/WebDAVServer.py
-${PYSITELIB}/pywebdav/lib/WebDAVServer.pyc
-${PYSITELIB}/pywebdav/lib/WebDAVServer.pyo
-${PYSITELIB}/pywebdav/lib/__init__.py
-${PYSITELIB}/pywebdav/lib/__init__.pyc
-${PYSITELIB}/pywebdav/lib/__init__.pyo
-${PYSITELIB}/pywebdav/lib/constants.py
-${PYSITELIB}/pywebdav/lib/constants.pyc
-${PYSITELIB}/pywebdav/lib/constants.pyo
-${PYSITELIB}/pywebdav/lib/davcmd.py
-${PYSITELIB}/pywebdav/lib/davcmd.pyc
-${PYSITELIB}/pywebdav/lib/davcmd.pyo
-${PYSITELIB}/pywebdav/lib/davcopy.py
-${PYSITELIB}/pywebdav/lib/davcopy.pyc
-${PYSITELIB}/pywebdav/lib/davcopy.pyo
-${PYSITELIB}/pywebdav/lib/davmove.py
-${PYSITELIB}/pywebdav/lib/davmove.pyc
-${PYSITELIB}/pywebdav/lib/davmove.pyo
-${PYSITELIB}/pywebdav/lib/dbconn.py
-${PYSITELIB}/pywebdav/lib/dbconn.pyc
-${PYSITELIB}/pywebdav/lib/dbconn.pyo
-${PYSITELIB}/pywebdav/lib/delete.py
-${PYSITELIB}/pywebdav/lib/delete.pyc
-${PYSITELIB}/pywebdav/lib/delete.pyo
-${PYSITELIB}/pywebdav/lib/errors.py
-${PYSITELIB}/pywebdav/lib/errors.pyc
-${PYSITELIB}/pywebdav/lib/errors.pyo
-${PYSITELIB}/pywebdav/lib/iface.py
-${PYSITELIB}/pywebdav/lib/iface.pyc
-${PYSITELIB}/pywebdav/lib/iface.pyo
-${PYSITELIB}/pywebdav/lib/locks.py
-${PYSITELIB}/pywebdav/lib/locks.pyc
-${PYSITELIB}/pywebdav/lib/locks.pyo
-${PYSITELIB}/pywebdav/lib/propfind.py
-${PYSITELIB}/pywebdav/lib/propfind.pyc
-${PYSITELIB}/pywebdav/lib/propfind.pyo
-${PYSITELIB}/pywebdav/lib/report.py
-${PYSITELIB}/pywebdav/lib/report.pyc
-${PYSITELIB}/pywebdav/lib/report.pyo
-${PYSITELIB}/pywebdav/lib/status.py
-${PYSITELIB}/pywebdav/lib/status.pyc
-${PYSITELIB}/pywebdav/lib/status.pyo
-${PYSITELIB}/pywebdav/lib/utils.py
-${PYSITELIB}/pywebdav/lib/utils.pyc
-${PYSITELIB}/pywebdav/lib/utils.pyo
-${PYSITELIB}/pywebdav/server/__init__.py
-${PYSITELIB}/pywebdav/server/__init__.pyc
-${PYSITELIB}/pywebdav/server/__init__.pyo
-${PYSITELIB}/pywebdav/server/daemonize.py
-${PYSITELIB}/pywebdav/server/daemonize.pyc
-${PYSITELIB}/pywebdav/server/daemonize.pyo
-${PYSITELIB}/pywebdav/server/fileauth.py
-${PYSITELIB}/pywebdav/server/fileauth.pyc
-${PYSITELIB}/pywebdav/server/fileauth.pyo
-${PYSITELIB}/pywebdav/server/fshandler.py
-${PYSITELIB}/pywebdav/server/fshandler.pyc
-${PYSITELIB}/pywebdav/server/fshandler.pyo
-${PYSITELIB}/pywebdav/server/mysqlauth.py
-${PYSITELIB}/pywebdav/server/mysqlauth.pyc
-${PYSITELIB}/pywebdav/server/mysqlauth.pyo
-${PYSITELIB}/pywebdav/server/server.py
-${PYSITELIB}/pywebdav/server/server.pyc
-${PYSITELIB}/pywebdav/server/server.pyo
-${DOCDIR}/ARCHITECTURE
-${DOCDIR}/Changes
-${DOCDIR}/INSTALL
-${DOCDIR}/LICENSE
-${DOCDIR}/README
-${DOCDIR}/TODO
-${DOCDIR}/VERSION
-${DOCDIR}/interface_class
-${DOCDIR}/walker
